tests/baselines/reference/this_inside-enum-should-not-be-allowed.errors.txt
this_inside-enum-should-not-be-allowed.ts(2,36): error TS2332: 'this' cannot be referenced in current location.
this_inside-enum-should-not-be-allowed.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
this_inside-enum-should-not-be-allowed.ts(7,30): error TS2332: 'this' cannot be referenced in current location.


==== this_inside-enum-should-not-be-allowed.ts (3 errors) ====
    enum TopLevelEnum {
        ThisWasAllowedButShouldNotBe = this // Should not be allowed
                                       ~~~~
!!! error TS2332: 'this' cannot be referenced in current location.
    }
    
    module ModuleEnum {
           ~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        enum EnumInModule {
            WasADifferentError = this // this was handled as if this was in a module
                                 ~~~~
!!! error TS2332: 'this' cannot be referenced in current location.
        }
    }